[gd_scene load_steps=4 format=3 uid="uid://yxqkdmqbbix3"]

[ext_resource type="Script" uid="uid://b2nyx7o6kdorr" path="res://story.gd" id="1_ladvd"]
[ext_resource type="AudioStream" uid="uid://bm2tkexjekw2a" path="res://assets/Music/Story Music.mp3" id="2_aj33w"]

[sub_resource type="Theme" id="Theme_aj33w"]

[node name="Story" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
theme = SubResource("Theme_aj33w")
script = ExtResource("1_ladvd")

[node name="StoryImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -7.0
offset_right = 1134.0
offset_bottom = 618.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 5
stretch_mode = 5

[node name="NavButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 9.0
offset_right = 57.0
offset_bottom = 39.0

[node name="PrevButton" type="Button" parent="NavButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Prev"

[node name="NextButton" type="Button" parent="NavButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Next"

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(20, 10)
layout_mode = 0
offset_left = 95.0
offset_top = 8.0
offset_right = 140.0
offset_bottom = 39.0
text = "Back
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_aj33w")
volume_db = 8.0
autoplay = true
parameters/looping = true

[connection signal="pressed" from="NavButtons/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="NavButtons/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
